syntax = "proto3";

package io.harness.perpetualtask.k8s.watch;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message Resource {
  message Quantity {
    int64 amount = 1;
    string unit = 2;
  }
  map<string, Quantity> requests = 1;
  map<string, Quantity> limits = 2;
}

message Container {
  string name = 1;
  string image = 2;
  Resource resource = 3;
}

message Owner {
  string uid = 1;
  string kind = 2;
  string name = 3;
  map<string, string> labels = 4;
}

message PodInfo {
  string cloud_provider_id = 2;
  string pod_uid = 3;
  string pod_name = 4;
  string namespace = 5;
  string node_name = 6;
  Resource total_resource = 7;
  google.protobuf.Timestamp creation_timestamp = 8;
  // label without value is invalid
  map<string, string> labels = 9;
  Owner top_level_owner = 11;
  repeated Container containers = 12;
  string cluster_id = 13;
  string cluster_name = 14;
}

message PodEvent {
  string cloud_provider_id = 2;
  string pod_uid = 3;
  enum EventType {
    EVENT_TYPE_INVALID = 0;
    EVENT_TYPE_SCHEDULED = 1;
    EVENT_TYPE_DELETED = 2;
  }
  EventType type = 4;
  google.protobuf.Timestamp timestamp = 5;
  string cluster_id = 6;
}

message NodeInfo {
  string cloud_provider_id = 2;
  string node_uid = 3;
  string node_name = 4;
  google.protobuf.Timestamp creation_time = 5;
  map<string, string> labels = 6;
  map<string, Resource.Quantity> allocatable_resource = 7;
  string cluster_id = 8;
  string cluster_name = 9;
  string provider_id = 10;
}

message NodeEvent {
  string cloud_provider_id = 2;
  string node_uid = 3;
  enum EventType {
    EVENT_TYPE_INVALID = 0;
    EVENT_TYPE_START = 1;
    EVENT_TYPE_STOP = 2;
  }
  EventType type = 4;
  google.protobuf.Timestamp timestamp = 5;
  string node_name = 6;
  string cluster_id = 7;
}

message K8SClusterSyncEvent {
  string cluster_id = 1;
  string cluster_name = 2;
  string cloud_provider_id = 3;
  repeated string active_pod_uids = 4;
  repeated string active_node_uids = 5;
  google.protobuf.Timestamp last_processed_timestamp = 6;
}
